Add +1 linha para dados do Dev

--- a/frontend/src/templates/index.html
+++ b/frontend/src/templates/index.html
@@ -87,6 +87,7 @@
           <li><a href="http://" target="_blank" rel="noopener noreferrer"></a></li>
           <li><a href="http://" target="_blank" rel="noopener noreferrer"></a></li>
           <li><a href="http://" target="_blank" rel="noopener noreferrer"></a></li>
+          <li><a href="http://" target="_blank" rel="noopener noreferrer"></a></li>
         </ul>
       </div>
     </div>
