-Primeira edição do CSS do quiz -Quiz-section quase finalizado

--- a/frontend/src/templates/index.html
+++ b/frontend/src/templates/index.html
@@ -18,7 +18,7 @@
     </div>
 
     <!-- Barra de progresso -->
-    <div class="container"> <!-- container do progresso -->
+    <div class="container example"> <!-- container do progresso -->
       <div class="progress-container"> <!-- container do progresso -->
         <div class="progress" id="progress"></div> <!-- progresso -->
         <div class="circle active">1</div> <!-- Cirulo de 1 acerto-->
