Refactor CSS and add font imports

--- a/frontend/src/assets/css/index.css
+++ b/frontend/src/assets/css/index.css
@@ -1,6 +1,11 @@
-* {
-margin:0px;
+/* Import fonts - pixels para combinar com tema de quiz - p/ titulos e p */
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
 
+* {
+  margin:0px;
+  padding:0px;
+  box-sizing: border-box;
 }
 
 
