--- a/frontend/src/templates/index.html
+++ b/frontend/src/templates/index.html
@@ -85,7 +85,7 @@
         <ul>
           <li><a href="https://github.com/Jonhvmp" target="_blank" rel="noopener noreferrer">Jonh Alex</a></li>
           <li><a href="https://github.com/Pedromanuelafonso47" target="_blank" rel="noopener noreferrer">Pedro Afonso</a></li>
-          <li><a href="http://" target="_blank" rel="noopener noreferrer"></a></li>
+          <li><a href="http://github.com/EvelynS-Dias" target="_blank" rel="noopener noreferrer">Evelyn Soares</a></li>
           <li><a href="http://" target="_blank" rel="noopener noreferrer"></a></li>
           <li><a href="http://" target="_blank" rel="noopener noreferrer"></a></li>
         </ul>
