--- a/frontend/src/templates/index.html
+++ b/frontend/src/templates/index.html
@@ -12,14 +12,14 @@
 </head>
 <body>
   <!-- Header -->
-  <header>
+  <header id="ja">
     <div class="container">
       <h1>Game Quiz</h1>
     </div>
 
     <!-- Barra de progresso -->
-    <div class="container example"> <!-- container do progresso -->
-      <div class="progress-container"> <!-- container do progresso -->
+    <div class="container"> <!-- container do progresso -->
+      <div class="progress-container one"> <!-- container do progresso -->
         <div class="progress" id="progress"></div> <!-- progresso -->
         <div class="circle active">1</div> <!-- Cirulo de 1 acerto-->
         <div class="circle">2</div> <!-- Cirulo de 2 acerto-->
