--- a/frontend/src/assets/css/index.css
+++ b/frontend/src/assets/css/index.css
@@ -17,6 +17,7 @@ header {
  border-radius: 5px;
  height: 60px;
  padding-top: 14px;
+ margin: 2%
  
 
  
@@ -25,6 +26,8 @@ header {
 
 main {
     display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .quizSection {
