--- a/frontend/src/assets/css/index.css
+++ b/frontend/src/assets/css/index.css
@@ -6,8 +6,8 @@
   margin:0px;
   padding:0px;
   box-sizing: border-box;
+  text-decoration: none;
 }
-
 
 header {
     display: flex;
@@ -18,10 +18,6 @@ header {
  height: 60px;
  padding-top: 14px;
  margin: 2%
- 
-
- 
-    
 }
 
 main {
@@ -46,14 +42,11 @@ main {
     align-items: center;
 }
 
-
 .container {
     justify-content: center;
     align-items: center;
     flex-direction: row;
 }
-
-
 
 .question {
     text-align: center;
@@ -61,9 +54,7 @@ main {
     flex-direction: row;
     border-radius: 3%;
     padding: 10%;
-
 }
-
 
 .answers {
     justify-content: center;
@@ -81,17 +72,14 @@ main {
     border-radius: 5%;
 }
 
-
 .how-to-play {
     flex-direction: row;
     justify-content: center;
     text-align: center;
 }
 
-
 .one{
     display: flex;
     flex-direction: row;
     gap: 40px;
 }
-
