--- a/frontend/src/templates/index.html
+++ b/frontend/src/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,7 +12,7 @@
 </head>
 <body>
   <!-- Header -->
-  <header id="ja">
+  <header id="header">
     <div class="container">
       <h1>Game Quiz</h1>
     </div>
@@ -66,7 +66,7 @@
       </div>
     </section>
    </main>
-   
+
    <!-- Footer com informações sobre como jogar o quiz e desenvolvedores -->
    <footer>
     <div class="container">
