--- a/frontend/src/templates/index.html
+++ b/frontend/src/templates/index.html
@@ -44,22 +44,22 @@
 
         <div class="answers"> <!-- Respostas -->
           <button class="answer"> <!-- Resposta -->
-            <span class="letter">A</span> <!-- Letra da resposta -->
+            <span class="letter-a letter">A</span> <!-- Letra da resposta -->
             <span class="answer-text">Answer</span> <!-- Texto da resposta -->
           </button>
 
           <button class="answer"> <!-- Resposta -->
-            <span class="letter">B</span> <!-- Letra da resposta -->
+            <span class="letter-b letter">B</span> <!-- Letra da resposta -->
             <span class="answer-text">Answer</span> <!-- Texto da resposta -->
           </button>
 
           <button class="answer"> <!-- Resposta -->
-            <span class="letter">C</span> <!-- Letra da resposta -->
+            <span class="letter-c letter">C</span> <!-- Letra da resposta -->
             <span class="answer-text">Answer</span> <!-- Texto da resposta -->
           </button>
 
           <button class="answer"> <!-- Resposta -->
-            <span class="letter">D</span> <!-- Letra da resposta -->
+            <span class="letter-d letter">D</span> <!-- Letra da resposta -->
             <span class="answer-text">Answer</span> <!-- Texto da resposta -->
           </button>
         </div>
