--- a/frontend/src/templates/index.html
+++ b/frontend/src/templates/index.html
@@ -69,10 +69,12 @@
 
    <!-- Footer com informações sobre como jogar o quiz e desenvolvedores -->
    <footer>
-    <div class="container">
+    <div class="container1">
       <div class="how-to-play">
         <h3>Como jogar?</h3>
-        <p>Para jogar, basta clicar na resposta que você acha correta. Cada resposta correta vale 20 pontos.</p>
+        <div class="text_i">
+          <p >Para jogar, basta clicar na resposta que você acha correta. Cada resposta correta vale 20 pontos.</p>
+          </div>
       </div>
 
       <div class="developers">
