Design-main-quiz

--- a/frontend/src/templates/index.html
+++ b/frontend/src/templates/index.html
@@ -32,6 +32,8 @@
 
   <!-- Main -->
    <main>
+    <video src="../assets/img/purple-cat-and-planets.1920x1080.mp4" autoplay muted loop class="bg-video" type="video.mp4">
+    </video>
     <section id="quiz-section" class="quizSection">
       <div class="container">
         <div class="question"> <!-- Pergunta -->
