--- a/frontend/src/templates/index.html
+++ b/frontend/src/templates/index.html
@@ -73,7 +73,7 @@
       <div class="how-to-play">
         <h3>Como jogar?</h3>
         <div class="text_i">
-          <p >Para jogar, basta clicar na resposta que você acha correta. Cada resposta correta vale 20 pontos.</p>
+          <p >Para jogar,basta clicar   na resposta que você acha correta.<p>  Cada resposta</p> correta vale 20 pontos.</p>
           </div>
       </div>
 
