--- a/frontend/src/templates/index.html
+++ b/frontend/src/templates/index.html
@@ -73,13 +73,13 @@
    <footer>
     <div class="container1">
       <div class="how-to-play">
-        <h3>Como jogar?</h3>
+        <h3 id="moused">Como jogar?</h3>
         <div class="text_i">
-          <p >Para jogar,basta clicar   na resposta que você acha correta.<p>  Cada resposta correta vale 20 pontos.</p></p>
+          <p id="ja" >Para jogar,basta clicar   na resposta que você acha correta.<p  id="ja"> Cada resposta correta vale 20 pontos.</p></p>
           </div>
       </div>
  <div class="developers">
-        <h3>Desenvolvedores</h3>
+        <h3 id="moused" >Desenvolvedores</h3>
         <ul>
           <li><a id="ja" href="https://github.com/Jonhvmp" target="_blank" rel="noopener noreferrer">Jonh Alex</a></li>
           <li><a id="ja" href="https://github.com/Pedromanuelafonso47" target="_blank" rel="noopener noreferrer">Pedro Afonso</a></li>
