--- a/frontend/src/assets/css/index.css
+++ b/frontend/src/assets/css/index.css
@@ -228,7 +228,7 @@ main {
     letter-spacing: 1px;
 }
 
-#ja{
+a{
     color: #00FFFF;
     font-family: Arial, Helvetica, sans-serif;
 }
@@ -240,6 +240,14 @@ main {
 #moused{
     color: #00FFFF;
 }
+footer h3 {
+    color: #00FFFF;
+}
+
+footer p{
+    color: #00FFFF;
+}
+
 
 
 
