--- a/frontend/src/templates/index.html
+++ b/frontend/src/templates/index.html
@@ -75,17 +75,17 @@
       <div class="how-to-play">
         <h3 id="moused">Como jogar?</h3>
         <div class="text_i">
-          <p id="ja" >Para jogar,basta clicar   na resposta que você acha correta.<p  id="ja"> Cada resposta correta vale 20 pontos.</p></p>
+          <p  >Para jogar,basta clicar   na resposta que você acha correta.<p  id="ja"> Cada resposta correta vale 20 pontos.</p></p>
           </div>
       </div>
  <div class="developers">
         <h3 id="moused" >Desenvolvedores</h3>
         <ul>
-          <li><a id="ja" href="https://github.com/Jonhvmp" target="_blank" rel="noopener noreferrer">Jonh Alex</a></li>
-          <li><a id="ja" href="https://github.com/Pedromanuelafonso47" target="_blank" rel="noopener noreferrer">Pedro Afonso</a></li>
-          <li><a id="ja" href="http://github.com/EvelynS-Dias" target="_blank" rel="noopener noreferrer">Evelyn Soares</a></li>
-          <li><a  id="ja" href="https://github.com/EliezerPrad0" target="_blank" rel="noopener noreferrer">Eliezer Prado</a></li>
-          <li><a id="ja" href="http://" target="_blank" rel="noopener noreferrer"></a></li>
+          <li><a  href="https://github.com/Jonhvmp" target="_blank" rel="noopener noreferrer">Jonh Alex</a></li>
+          <li><a  href="https://github.com/Pedromanuelafonso47" target="_blank" rel="noopener noreferrer">Pedro Afonso</a></li>
+          <li><a  href="http://github.com/EvelynS-Dias" target="_blank" rel="noopener noreferrer">Evelyn Soares</a></li>
+          <li><a  href="https://github.com/EliezerPrad0" target="_blank" rel="noopener noreferrer">Eliezer Prado</a></li>
+          <li><a  href="http://" target="_blank" rel="noopener noreferrer"></a></li>
         </ul>
       </div>
     </div>
