-Atualizações dentro do nextQuestion: Quando acabar as questões, apagar o conteúdo dentro dos botões e dentro do texto "Questão"
-Criei a div  "totalCurrentQuestion" no HTML

-Criação da function "checkAnswer" e a base do seu algoritmo.

--- a/frontend/src/templates/index.html
+++ b/frontend/src/templates/index.html
@@ -37,7 +37,9 @@
     <section id="quiz-section" class="quizSection">
       <div class="container">
         <div class="question"> <!-- Pergunta -->
+          <div class="totalCurrentQuestion">
           <h2>Questão <span id="currentQuestion">0</span></h2> <!-- Manipular número da pergunta atual pelo JS-->
+          </div>
           <div class="question-text"> <!-- Texto da pergunta -->
             <!-- Pergunta -->
              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas, incidunt.
