--- a/frontend/src/assets/css/index.css
+++ b/frontend/src/assets/css/index.css
@@ -8,8 +8,8 @@
   box-sizing: border-box;
   text-decoration: none;
   list-style: none;
-  overflow-y: hidden;
-  overflow-x: hidden;
+  /* overflow-y: hidden;
+  overflow-x: hidden; */
 }
 
 :root {
@@ -32,12 +32,39 @@
     --cor-acento: #E74C3C;
 }
 
+/*=============== SCROLL BAR ===============*/
+::-webkit-scrollbar{
+    width: .6rem;
+    background-color: #9AD6B0;
+  }
+
+  ::-webkit-scrollbar-thumb{
+    background-color: #26315F;
+    border-radius: 1rem;
+  }
+
+  ::-webkit-scrollbar-thumb:hover{
+    background-color: #1C0F3F;
+
+}
+
 h1, h2, h3, h4, h5, h6 {
     color: var(--title-cor)
 }
 
 p, span {
     color: var(--text-cor)
+}
+
+#background-video {
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    width: 100dvh;
+    min-width: 100%;
+    min-height: 100%;
+    z-index: -1; /* Coloca o video atrás de todos os elementos */
+    object-fit: cover;
 }
 
 /* Cabeçalho (Header) */
@@ -50,6 +77,17 @@ header {
     border: 2px solid black;
     padding: 10px;
     border-radius: 10px;
+}
+
+#container {
+    position: relative;
+    z-index: 1;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 15px 10px;
 }
 
 header h1 {
@@ -72,17 +110,6 @@ main {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-}
-
-.bg-video{
-    width: 100%;
-    height: 100%;
-    object-position: center;
-    object-fit: cover;
-    z-index: -1;
-    position: absolute;
-    bottom: 0;
-    right: 0;
 }
 
 /* Seção do QUIZ */
@@ -120,7 +147,7 @@ main {
 .question h2 {
     font-size: 2.5em;
     color: #ECF0F1;
-    
+
 }
 .question-text {
     margin-top: 20px;
@@ -129,6 +156,7 @@ main {
     color: #ECF0F1;
 }
 .answers {
+    gap: 10px;
     flex: 1;
     display: flex;
     flex-direction: column;
@@ -138,7 +166,7 @@ main {
 .answer {
     display: flex;
     align-items: center;
-    margin-bottom: 20px;
+    /* margin-bottom: 20px; */
     background-color: #ecf0f1e0;
     padding: 10px 20px;
     border-radius: 50px;
@@ -213,18 +241,42 @@ main {
 
 /*      Fim seção Quiz      */
 
-/* Começo footer */
+/* FOOTER and DIVs */
 
+footer {
+    display: flex;
+}
+
+footer .container {
+    background-color: black;
+    padding: 0 25px;
+    display: flex;
+    gap: 15px;
+    align-items: center;
+    justify-content: space-around;
+}
+
+footer .how-to-play {
+    width: 300px;
+    display: flex;
+    gap: 10px;
+    padding: 10px;
+    flex-direction: column;
+    align-items: center;
+}
+
+
+/*
 .container1{
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     margin-top: 30px;
-    
+
 }
 
 .text_i{
-    
+
     letter-spacing: 1px;
 }
 
@@ -246,7 +298,7 @@ footer h3 {
 
 footer p{
     color: #00FFFF;
-}
+} */
 
 
 
