--- a/frontend/src/assets/css/index.css
+++ b/frontend/src/assets/css/index.css
@@ -244,14 +244,19 @@ main {
 /* FOOTER and DIVs */
 
 footer {
+    border-radius: 10px 10px 0 0;
+    backdrop-filter: blur(10px);
     display: flex;
+    width: 70%;
+    padding: 0;
+    background: #350a5691;
+    height: 26%;
+    align-items: center;
+    justify-content: space-around;
 }
 
 footer .container {
-    background-color: black;
-    padding: 0 25px;
     display: flex;
-    gap: 15px;
     align-items: center;
     justify-content: space-around;
 }
@@ -265,6 +270,80 @@ footer .how-to-play {
     align-items: center;
 }
 
+footer .how-to-play h3 {
+    font-size: 1.1em;
+    color: white;
+    padding: 5px;
+}
+
+footer .how-to-play p {
+    font-size: 1em;
+    color: #00FFFF;
+    padding: 5px;
+}
+
+footer h3 {
+    font-size: 1.1em;
+    color: white;
+    padding: 5px;
+
+}
+
+footer .text_i {
+    text-align: center;
+}
+
+footer p {
+    font-size: 1em;
+    color: white;
+    padding: 5px;
+}
+
+footer .developers {
+    display: flex;
+    padding: 10px;
+    flex-direction: column;
+    align-items: center;
+}
+
+footer .developers ul {
+    display: flex;
+    flex-direction: column;
+    list-style: none;
+    gap: 5px;
+}
+
+footer .developers ul li {
+    font-size: 1em;
+    color: #00FFFF;
+}
+
+footer .developers ul li a {
+    position: relative;
+    display: inline-block;
+    color: #00FFFF;
+}
+
+footer .developers ul li a::after {
+    content: '';
+    position: absolute;
+    width: 0;
+    height: 1px;
+    display: block;
+    margin-top: 1px;
+    left: 0;
+    background: var(--cor-primaria);
+    transition: width 0.4s ease, left 0.4s ease;
+}
+
+footer .developers ul li a:hover::after {
+    width: 100%;
+    left: 0;
+}
+
+footer .developers ul li a:hover {
+    color: #1F8EF1;
+}
 
 /*
 .container1{
