--- a/frontend/src/templates/index.html
+++ b/frontend/src/templates/index.html
@@ -14,10 +14,14 @@
 
 <body>
   <!-- Fundo animado -->
-  <video autoplay muted loop id="background-video">
+  <video autoplay loop id="background-video">
     <source src="../assets/videos/purple-cat-and-planets.1920x1080.mp4" type="video/mp4">
     Navegador não suporta video!
   </video>
+
+  <audio autoplay loop>
+    <source src="../assets/audio/videoplayback.mp3">
+  </audio>
 
   <div id="container" class="container">
     <!-- Header -->
