--- a/frontend/src/templates/index.html
+++ b/frontend/src/templates/index.html
@@ -19,8 +19,9 @@
     Navegador não suporta video!
   </video>
 
-  <audio autoplay loop>
-    <source src="../assets/audio/videoplayback.mp3">
+  <audio autoplay  loop>
+      <source src="../assets/audio/videoplayback.mp3">
+      Seu navegador não suporta o elemento de áudio.
   </audio>
 
   <div id="container" class="container">
@@ -90,8 +91,6 @@
             <p>Para jogar,basta clicar na resposta que você acha correta. <br>
               Cada resposta correta vale 20 pontos.
             </p>
-            
-            
           </div>
         </div>
         <div class="developers">
@@ -112,6 +111,6 @@
   </div>
   <!-- Import JS -->
   <script src="../assets/js/index.js"></script>
+  <script src="../assets/js/background.js"></script>
 </body>
-
 </html>
