Refatorar autoplay do vídeo de fundo para desabilitar o som

--- a/frontend/src/templates/index.html
+++ b/frontend/src/templates/index.html
@@ -14,7 +14,7 @@
 
 <body>
   <!-- Fundo animado -->
-  <video autoplay loop id="background-video">
+  <video autoplay muted loop id="background-video">
     <source src="../assets/videos/purple-cat-and-planets.1920x1080.mp4" type="video/mp4">
     Navegador não suporta video!
   </video>
