--- a/frontend/src/templates/index.html
+++ b/frontend/src/templates/index.html
@@ -19,7 +19,7 @@
     Navegador não suporta video!
   </video>
 
-  <audio autoplay  loop>
+  <audio id="audio-play" autoplay  loop>
       <source src="../assets/audio/videoplayback.mp3">
       Seu navegador não suporta o elemento de áudio.
   </audio>
