--- a/frontend/src/templates/index.html
+++ b/frontend/src/templates/index.html
@@ -13,8 +13,9 @@
 </head>
 
 <body>
+  
   <!-- Fundo animado -->
-  <video autoplay loop id="background-video">
+  <video autoplay loop muted id="background-video">
     <source src="../assets/videos/purple-cat-and-planets.1920x1080.mp4" type="video/mp4">
     Navegador não suporta video!
   </video>
@@ -112,6 +113,7 @@
   </div>
   <!-- Import JS -->
   <script src="../assets/js/index.js"></script>
+  
 </body>
 
 </html>
