--- a/frontend/src/assets/css/index.css
+++ b/frontend/src/assets/css/index.css
@@ -392,7 +392,7 @@ footer .developers ul li a:hover {
   .question {
     width: 100%;
     height: 10rem;
-    border-radius: 30%;
+    border-radius: 2rem;
 
   }
   .question h2 {
