--- a/frontend/src/templates/index.html
+++ b/frontend/src/templates/index.html
@@ -15,17 +15,13 @@
 <body>
   
   <!-- Fundo animado -->
-<<<<<<< HEAD
   <video autoplay loop muted id="background-video">
-=======
-  <video autoplay muted loop id="background-video">
->>>>>>> c4410432677276f953ea7aaeda1cbb6481bf78ed
     <source src="../assets/videos/purple-cat-and-planets.1920x1080.mp4" type="video/mp4">
     Navegador não suporta video!
   </video>
 
   <audio id="audio-play" autoplay  loop>
-      <source src="../assets/audio/videoplayback.mp3">
+      <source src="../assets/audio/videoplayback.mp3" type="audio/mp3">
       Seu navegador não suporta o elemento de áudio.
   </audio>
 
