--- a/frontend/src/templates/start.html
+++ b/frontend/src/templates/start.html
@@ -10,6 +10,7 @@
     <!-- link dos icons "https://fontawesome.com/icons" -->
 </head>
 <body>
+    <script src="https://kit.fontawesome.com/a1ed9ba945.js" crossorigin="anonymous"></script>
     <!-- Fundo animado -->
   <video autoplay loop muted id="background-video">
     <source src="../assets/videos/purple-cat-and-planets.1920x1080.mp4" type="video/mp4">
@@ -19,11 +20,11 @@
   <div id="container">
     <section class="start-area">
         <div class="name-quiz">
-            <h1>Dev Quiz ☝🤓</h1>
+            <h1>Dev Quiz <i class="fa-solid fa-brain"></i></h1>
             <p>Será que consegue alcançar a pontuação maxima?</p>
         </div>
         <div class="start-button">
-            <p>Teste seu conhecimento Dev!</p>
+            <p><i class="fa-solid fa-arrow-down"></i>Teste seu conhecimento Dev!<i class="fa-solid fa-arrow-down"></i></p>
             <a href="index.html">Jogar</a>
         </div>
     </section>
